--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -735,4 +735,6 @@
     <string name="pt_search_show_shopping_options">Toon shopping menu’s</string>
     <string name="lbl_standardize">Standaardiseren</string>
     <string name="lbl_author_pseudonym_of_X">ps. %1$s</string>
+    <string name="lbl_strip_info_mapped_bookshelf_wishlist">„Verlanglijst” boekenplank</string>
+    <string name="lbl_strip_info_mapped_bookshelf_owned_books">„In bezit” boekenplank</string>
 </resources>
