--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -634,7 +634,7 @@
     <string name="pt_search_resolve_authors_bedetheque">Los auteursnamen op met behulp van de Bedetheque-website</string>
     <string name="pt_search_uses_publisher">Zoeken maakt gebruik van de uitgever</string>
     <string name="pt_show_author_name_given_first">Opmaak van auteursnamen</string>
-    <string name="pt_show_title_reordered">Toon titels als</string>
+    <string name="pt_show_title_reordered">Toon titels als…</string>
     <string name="pt_sort_author_name_given_first">Sorteren op auteursnaam</string>
     <string name="pt_sort_title_reordered">Sorteer titels op</string>
     <string name="pt_storage_volume">Opslagvolume</string>
