--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -605,7 +605,7 @@
     <string name="pt_search_reformat_format">Standaryzuj nazwy „formatu książki”</string>
     <string name="pt_search_uses_publisher">Wyszukiwanie używa wydawcy</string>
     <string name="pt_show_author_name_given_first">Formatowanie nazwiska autora</string>
-    <string name="pt_show_title_reordered">Pokaż tytuły jako</string>
+    <string name="pt_show_title_reordered">Pokaż tytuły jako…</string>
     <string name="pt_sort_author_name_given_first">Sortowanie nazwisk autorów</string>
     <string name="pt_sort_title_reordered">Sortuj tytuły według</string>
     <string name="pt_thumbnails_cache_resized">Zmienione obrazy są buforowane</string>
