--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <!--
   ~ @Copyright 2018-2023 HardBackNutter
   ~ @License GNU General Public License
@@ -750,4 +751,5 @@
     <string name="lbl_author_pseudonym_of_X">se. %1$s</string>
     <string name="lbl_original_title">Título original</string>
     <string name="lbl_original_title_long">Título original si el libro es una traducción</string>
+    <string name="error_site_access_blocked">El acceso ha sido bloqueado por el sitio web.</string>
 </resources>
