--- a/app/src/main/res/values-el/strings.xml
+++ b/app/src/main/res/values-el/strings.xml
@@ -732,7 +732,8 @@
     <string name="info_purge_blns_item_name">Διαγραφή της κατάστασης κόμβου του %1$s «%2$s»;</string>
     <string name="error_updates_aborted">Οι ενημερώσεις ματαιώθηκαν</string>
     <string name="lbl_country">Χώρα</string>
-    <string name="lbl_strip_info_mapped_bookshelf_wishlist">Βιβλιοθήκη που έχει ανατεθεί στη λίστα επιθυμιών</string>
+    <string name="lbl_strip_info_mapped_bookshelf_wishlist">Βιβλιοθήκη που έχει ανατεθεί στη λίστα επιθυμιών σας</string>
+    <string name="lbl_strip_info_mapped_bookshelf_owned_books">Βιβλιοθήκη για τα δικά σας βιβλία</string>
     <string name="pt_search_show_shopping_options">Εμφάνιση μενού αγορών</string>
     <string name="lbl_standardize">Τυποποιώ</string>
     <string name="lbl_author_pseudonym_of_X">ψε. %1$s</string>
