--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -732,7 +732,8 @@
     <string name="info_purge_blns_item_name">Knotenstatus von %1$s „%2$s“ löschen?</string>
     <string name="error_updates_aborted">Aktualisierungen abgebrochen</string>
     <string name="lbl_country">Land</string>
-    <string name="lbl_strip_info_mapped_bookshelf_wishlist">Der Wunschliste zugeordnetes Bücherregal</string>
+    <string name="lbl_strip_info_mapped_bookshelf_wishlist">Bücherregal Ihrer Wunschliste zugewiesen</string>
+    <string name="lbl_strip_info_mapped_bookshelf_owned_books">Bücherregal für Ihre eigenen Bücher</string>
     <string name="pt_search_show_shopping_options">Standardisieren</string>
     <string name="lbl_standardize">Einkaufsmenüs anzeigen</string>
     <string name="lbl_author_pseudonym_of_X">ps. %1$s</string>
